tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_errors@super_in_top_blocks.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&err"
input_file: tera/src/snapshot_tests/rendering_inputs/errors/super_in_top_blocks.txt
---
error: Tried to use super() in the top level block
 --> super_in_top_blocks.txt:2:4
  |
2 | {{ super() }}
  |    ^^^^^^^
